fix: set working directory for maven build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,6 @@ jobs:
         java-version: '17'
 
     - name: Build with Maven
+      working-directory: cltmp
       run: mvn clean package -DskipTests
 
